--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
+    "recharts": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
