--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
